<resources>
    <string name="app_name">Tiffin service app</string>
    <string name="tiffin_service">Tiffin Service</string>
    <string name="or">or</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_no">Mobile No</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="sign_up">Sign-up</string>
    <string name="password">Password</string>
    <string name="verify">Verify</string>
    <string name="did_nt_receive_the_code">Did\'nt receive the code?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remaining_nfor_expiry">remaining\nfor expiry</string>
    <string name="days">days</string>
    <string name="pause_service">Pause service</string>
    <string name="renew">Renew</string>
    <string name="resume_service">Resume service</string>
    <string name="pay_to_subscribe">Pay to subscribe</string>
    <string name="veg">Veg</string>
    <string name="non_veg">Non veg</string>
    <string name="availability">Availability</string>
    <string name="delivery_timings">Delivery timings</string>
    <string name="not_active">Not Active</string>
    <string name="active">Active</string>
    <string name="enter_address">Enter address</string>
    <string name="set_location">Set Location</string>
    <string name="mapbox_access_token">pk.eyJ1IjoidWRkZXNoMTkiLCJhIjoiY2twc2o2dXJiMGl1MjMxbW5oMHJuMjl6MCJ9.ONEYAfFCVRVUl8dD9xL-TA</string>
</resources>