<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SubscribedServiceActivity"
    android:background="@color/colorPrimary" >


    <com.github.siyamed.shapeimageview.mask.PorterShapeImageView
        android:id="@+id/subscribedServiceTabImageView"
        android:layout_width="0dp"
        android:layout_height="162dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        app:siShape="@drawable/bg_tab_image"/>


    <ImageView
            android:id="@+id/subscribedServiceLogoImageView"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.071"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.336"
    />
    <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_marginBottom="28dp"
                  android:layout_marginStart="20dp"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintHorizontal_bias="0.161" app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.332"
                  app:layout_constraintStart_toEndOf="@+id/subscribedServiceLogoImageView">

        <TextView
                android:id="@+id/subscribedServiceProviderNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/colorText"
                android:textSize="18sp"
                android:textAlignment="textStart"
                android:layout_margin="10dp"/>
        <TextView
                android:id="@+id/subscribedServiceNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/colorText"
                android:textSize="14sp"
                android:layout_margin="10dp"/>
    </LinearLayout>


    <TextView
            android:id="@+id/subscribedServiceDaysTextView"
            android:layout_width="41dp"
            android:layout_height="42dp"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/colorText"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.081"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.64"/>
    <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/days"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.211"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.637"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/remaining_nfor_expiry"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.093"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/subscribedServiceTabImageView"
            app:layout_constraintVertical_bias="0.7"/>
    <TextView
        android:id="@+id/subscribedServiceDescriptionTextView"
        android:layout_width="226dp"
        android:layout_height="221dp"
        android:fontFamily="@font/roboto_medium"
        android:textAlignment="textStart"
        android:textColor="@color/colorText"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.854"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.594" />

    <Button
            android:id="@+id/subscribedServicePauseButton"
            android:layout_width="164dp"
            android:layout_height="48dp"
            android:background="@drawable/bg_button_danger"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/pause_service"
            android:textAllCaps="false"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.117"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.912"
            android:visibility="gone"/>
    <Button
            android:id="@+id/subscribedServiceRenewButton"
            android:layout_width="164dp"
            android:layout_height="48dp"
            android:background="@drawable/bg_button_general"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/renew"
            android:textAllCaps="false"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.89"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.912"/>
    <Button
        android:id="@+id/subscribedServiceResumeButton"
        android:layout_width="164dp"
        android:layout_height="48dp"
        android:background="@drawable/bg_button_success"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/resume_service"
        android:textAllCaps="false"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.912" />

</androidx.constraintlayout.widget.ConstraintLayout>