<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    android:elevation="10dp"
    android:layout_margin="10dp"
    android:stateListAnimator="@animator/lift_on_touch_card"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:scaleType="fitXY"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/colorText"
                    android:fontFamily="@font/roboto_bold"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="20dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/vegicon"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/veg"
                    android:textColor="@color/colorText"
                    android:textSize="14sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/nonvegicon"
                        android:drawablePadding="5dp"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/non_veg"
                        android:textColor="@color/colorText"
                        android:textSize="14sp"
                        android:layout_marginStart="6dp"/>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorText"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_medium"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/availability"
                android:textColor="@color/colorClickableText"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/colorText"
                android:fontFamily="@font/roboto_bold"
                android:layout_marginStart="20dp"
                android:layout_marginTop="6dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:textSize="18sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_bold"/>
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>