<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.IndividualServiceProviderActivity"
    android:background="@color/colorPrimary">
    <com.github.siyamed.shapeimageview.mask.PorterShapeImageView
        android:id="@+id/individualServiceProviderTabImageView"
        android:layout_width="0dp"
        android:layout_height="162dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        app:siShape="@drawable/bg_tab_image"/>

    <ImageView
            android:id="@+id/individualServiceProviderLogoImageView"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.068"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.316"/>


    <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
                  app:layout_constraintEnd_toEndOf="parent"
                  android:orientation="vertical"
                  android:layout_marginStart="20dp"
                  app:layout_constraintStart_toEndOf="@+id/individualServiceProviderLogoImageView"
                  app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="0.303">

        <TextView
                android:id="@+id/individualServiceProviderNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/colorText"
                android:textSize="18sp"
                android:layout_margin="5dp"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">
            <TextView
                    android:id="@+id/individualServiceProviderVegTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/veg"
                    android:textColor="@color/colorText"
                    android:textSize="14sp"
                    app:drawableStartCompat="@drawable/vegicon"
                    android:layout_marginEnd="10dp"/>
            <TextView
                    android:id="@+id/individualServiceProviderNonVegTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/non_veg"
                    android:textColor="@color/colorText"
                    android:textSize="14sp"
                    app:drawableStartCompat="@drawable/nonvegicon"/>
        </LinearLayout>


        <TextView
                android:id="@+id/individualServiceProviderDistanceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/colorText"
                android:textSize="14sp"
                android:layout_margin="5dp"/>
    </LinearLayout>


    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:orientation="vertical" app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintHorizontal_bias="0.064" app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintVertical_bias="0.476" android:id="@+id/linearLayout2">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/availability"
                android:textColor="@color/colorText"
                android:textSize="14sp"
                android:layout_margin="5dp"/>
        <TextView
                android:id="@+id/individualServiceProviderLunchDinnerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/colorText"
                android:textSize="18sp"
                android:layout_margin="5dp"/>
    </LinearLayout>


    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="vertical"
                  app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
                  android:layout_marginBottom="52dp" android:id="@+id/linearLayout4"
                  android:layout_marginStart="20dp">
        <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/delivery_timings"
                android:textColor="@color/colorText"
                android:textSize="14sp"
                android:layout_margin="5dp"/>
        <TextView
                android:id="@+id/individualServiceProviderDeliveryTimingsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/colorText"
                android:textSize="18sp"
                android:layout_margin="5dp"/>

        <TextView
                android:id="@+id/individualServiceProviderPhoneTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/colorText"
                android:textSize="16sp"
                android:layout_margin="5dp"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/individualServiceProviderRecyclerView"
            android:layout_width="0dp"
            android:layout_height="198dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4"/>


</androidx.constraintlayout.widget.ConstraintLayout>